:bug: Fix truncated title in sidebar
Fixes #133

--- a/styles/navigable.less
+++ b/styles/navigable.less
@@ -18,6 +18,10 @@ kite-navigable-stack {
   }
 
   .kite-content;
+
+  .split-line > * {
+    flex: 1 1 auto;
+  }
 }
 
 kite-navigable-stack-breadcrumb {
